tests/function_as_type/function_as_type.exp
Error ------------------------------------------------------------------------------------------------- uses_fun.js:3:14

Cannot import the value `fun` as a type. `import type` only works on type exports like type aliases, interfaces, and
classes. If you intended to import the type of a value use `import typeof` instead. [import-value-as-type]

   3| import type {fun} from './fun';
                   ^^^


Error -------------------------------------------------------------------------------------------------- uses_fun.js:5:6

Cannot use `fun` as a type because it is an `any`-typed value. Type `fun` properly, so it is no longer `any`-typed, to
use it as an annotation. [value-as-type]

   5| ({}: fun)
           ^^^



Found 2 errors
